# Ray-Tracer

./: .gitignore  CMakeLists.txt  Colour.cpp  Colour.h  IntersectionPoint.cpp  IntersectionPoint.h  Light.cpp  Light.h  README.md  Ray.cpp  SceneObject.cpp  SceneObject.h  Sphere.cpp  Sphere.h  Vector3D.cpp  main.cpp
